folders + files created

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,13 @@
         </div>
         <button><img class="frame" src="{{ url_for('static', filename='images/frame-1.png') }}" /></button>
       </div>
+      <!--WE HAVE THIS WORKING
+      <input type="text" name="user_text" placeholder="Enter text" />
+      <input type="submit" value="Generate Image" />
+      {% if image_url %}
+      <img src="{{ image_url }}" alt="Generated Image" />
+      {% endif %}
+      -->
     </div>
   </body>
 </html>
