--- a/static/css/style.css
+++ b/static/css/style.css
@@ -201,8 +201,8 @@
   height: 53px;
   top: 0;
   left: 208px;
-  background-image: url(./img/vector.png);
-  background-size: 100% 100%;
+  background-image: url('/static/images/vector.png');
+  background-size: 100% 100%;  
 }
 
 .welcome-page .hackgt-logo {
