--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <img class="frame" src="{{ url_for('static', filename='images/frame-1.png') }}" />
             <div class="rectangle"></div>
             <div class="nav-nav-menu">
-              <div class="nav-list-item"><div class="list-item">about</div></div>
+              <div id="clickablePrintConsole" class="nav-list-item"><div class="list-item">about</div></div>
               <div class="list-item-wrapper"><div class="list-item">creators</div></div>
               <div class="nav-list-item"><div class="list-item">contact</div></div>
             </div>
@@ -44,5 +44,6 @@
         </div>
       </div>
     </div>
+    <button id="clickButton">Click me</button>
   </body>
 </html>
