--- a/templates/storyinput.html
+++ b/templates/storyinput.html
@@ -17,18 +17,20 @@
         text-align: center;
       }
       #storybutton {
-        margin-top: 5%;
+        margin-top: 20px;
       }
     </style>
   </head>
   <body>
     <div class = "storyinputbody">
       <h1>Enter Text to Generate Images</h1>
-      <p>In each text field, enter a section of your story. For example, in the first text field, insert the setting. In the last, enter the falling action.</p>
+      <p>In each text field, enter a section of your story.</p>
       <form method="POST">
-        <input type="text" name="user_text[]" placeholder="Enter Beginning" />
-        <input type="text" name="user_text[]" placeholder="Enter Middle" />
-        <input type="text" name="user_text[]" placeholder="Enter End" />
+        <input type="text" name="user_text[]" placeholder="Introduction/Setting" />
+        <input type="text" name="user_text[]" placeholder="Rising Action" />
+        <input type="text" name="user_text[]" placeholder="Climax" />
+        <input type="text" name="user_text[]" placeholder="Falling Action" />
+        <input type="text" name="user_text[]" placeholder="Conclusion" />
         <br>
         <input id="storybutton" type="submit" value="Create your story!" />
       </form>  
