working body of style, script, and index of front end

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,14 @@
             <img class="vector-10" src="{{ url_for('static', filename='images/vector-2.svg') }}" />
           </div>
         </div>
-      </div>
+      </div> 
+      <div class="BUTTON TO MOVE ON">
+        <a href="/generate_image">
+          <button id="clickButton" class="button">
+            Create Your Story
+          </button>
+        </a> 
+      </div>  
     </div>
-    <button id="clickButton">Click me</button>
   </body>
 </html>
