--- a/static/css/style.css
+++ b/static/css/style.css
@@ -277,3 +277,18 @@
   top: 57px;
   left: 90px;
 }
+
+.button {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #555;
+}
