--- a/templates/storyinput.html
+++ b/templates/storyinput.html
@@ -23,22 +23,25 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        flex-wrap: wrap;
         align-items: center;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: large;
-        margin: 200px;
+      }
+      h1 {
+        font-size: xx-large;
       }
       p {
         font-size: large;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
       }
       #storybutton {
-        margin-top: 30px;
+        margin: 50px;
         background-color: #433128;
         color: #C9AC9C;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: large;
-        padding: 10px 20px;
+        font-size: x-large;
+        padding: 15px 30px;
         border: none;
         border-radius: 20px;
         cursor: pointer
@@ -55,6 +58,7 @@
         border: 2px dashed #9A7966; /* Add a border */
         border-radius: 5px; /* Round the corners */
         font-size: 16px; /* Set the font size */
+        flex-wrap: wrap;
       }
       .styled-input:focus {
         border: 2px solid #3588bb;
@@ -71,11 +75,21 @@
       input {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       }
+      a img {
+        width: 150px; /* Adjust the width as needed */
+        height: auto; /* Maintain aspect ratio for responsive design */
+        border: 0px;
+        margin-left: 20px;
+      }
         
 
     </style>
   </head>
   <body>
+    <a href="index.html">
+      <img src="{{ url_for('static', filename='images/hackgt_logo.png') }}" alt="Your Logo">
+  </a>
+  </div>
     <div class = "storyinputbody">
       <h1>Enter Text to Generate Images</h1>
       <p>In each text field, enter a section of your story.</p>
@@ -91,3 +105,4 @@
     </div>  
   </body>
 </html>
+
