--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,11 @@
             <div class="div">Welcome!</div>
             <img class="group" src="{{ url_for('static', filename='images/group-1.png') }}" />
             <img class="group-2" src="{{ url_for('static', filename='images/group.png') }}" />
-            <img class="frame" src="{{ url_for('static', filename='images/frame-1.png') }}" />
+            <div class="frame">
+              <a href="/generate_image"> 
+                <img class="frame-1" src="{{ url_for('static', filename='images/frame-1.png') }}" />
+              </a>
+            </div>
             <div class="rectangle"></div>
             <div class="nav-nav-menu">
               <div id="clickablePrintConsole" class="nav-list-item"><div class="list-item">about</div></div>
