--- a/templates/storyinput.html
+++ b/templates/storyinput.html
@@ -86,7 +86,7 @@
     </style>
   </head>
   <body>
-    <a href="index.html">
+    <a href="/">
       <img src="{{ url_for('static', filename='images/hackgt_logo.png') }}" alt="Your Logo">
   </a>
   </div>
