--- a/templates/storyinput.html
+++ b/templates/storyinput.html
@@ -27,6 +27,7 @@
         align-items: center;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: large;
+        margin-top: 30px;
       }
       h1 {
         font-size: xx-large;
@@ -79,16 +80,34 @@
         width: 150px; /* Adjust the width as needed */
         height: auto; /* Maintain aspect ratio for responsive design */
         border: 0px;
-        margin-left: 20px;
+        float: right;
+        margin: 0px;
+      }
+
+      nav {
+        background-color: #433128;
+        width: 100%;
+        height: 150px;
+        margin: 0px;
       }
         
+      a {
+        width: 20px; /* Adjust the width as needed */
+        height: 20px; /* Maintain aspect ratio for responsive design */
+        border: 0px;
+        float: right;
+        margin-top: 0px;
+      }
 
     </style>
   </head>
   <body>
-    <a href="/">
-      <img src="{{ url_for('static', filename='images/hackgt_logo.png') }}" alt="Your Logo">
-  </a>
+    <nav>
+      <a href="/">
+            <img src="{{ url_for('static', filename='images/hackgt_logo.png') }}" alt="Your Logo">
+      </a>
+
+  </nav>
   </div>
     <div class = "storyinputbody">
       <h1>Enter Text to Generate Images</h1>
