centered button on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,7 @@
             <a href="/about">
               <img class="group" src="{{ url_for('static', filename='images/group-1.png') }}" />
             </a>
-            <img class="group-2" src="{{ url_for('static', filename='images/group.png') }}" />
-            <div class="frame">
-              <a href="/next_page.html">
-                <img class="frame-1" src="{{ url_for('static', filename='images/frame-1.png') }}" />
-              </a>
-            </div>            
+            <img class="group-2" src="{{ url_for('static', filename='images/group.png') }}" />      
             <div class="rectangle"></div>
             <div class="nav-nav-menu">
               <div id="clickablePrintConsole" class="nav-list-item"><div class="list-item">about</div></div>
@@ -52,7 +47,7 @@
         <div class="BUTTON-TO-MOVE-ON">
           <a href="/generate_image">
             <button id="clickButton" class="button">
-              Create Your Story
+              Get Started Now!
             </button>
           </a>       
       </div>  
