--- a/templates/storyinput.html
+++ b/templates/storyinput.html
@@ -316,7 +316,7 @@
       </a>
 
   </nav>
-  </div>
+  <div>
     <div class = "storyinputbody">
       <h1>Enter Text to Generate Images</h1>
       <p>In each text field, enter a section of your story.</p>
