--- a/static/css/style.css
+++ b/static/css/style.css
@@ -278,28 +278,27 @@
   left: 90px;
 }
 
-/* Add a specific z-index value to the "frame-1" image to ensure it's on top */
-.frame-1 {
-    position: relative; /* Ensure it can be z-indexed */
-    z-index: 2; /* You can adjust the value as needed */
-}
-
 .BUTTON-TO-MOVE-ON {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
+  top: 69%;
+  left: 555px;
   z-index: 1; /* Ensure it's on top of other elements */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .button {
-  background-color: #433128; /* Change the button color */
+  margin: 50px;
+  background-color: #433128;
   color: #C9AC9C;
-  padding: 10px 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: x-large;
+  padding: 15px 30px;
   border: none;
-  border-radius: 4px;
-  font-size: 18px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+  border-radius: 20px;
+  cursor: pointer
 }
 
 .button:hover {
