--- a/templates/storyscreen.html
+++ b/templates/storyscreen.html
@@ -4,6 +4,7 @@
     <title>Your Storybook</title>
     <style>
       /* CSS for styling images */
+
       img {
         margin: 10px; /* Add spacing around each image */
         border: 2px solid #333; /* Add a border to the images */
@@ -11,8 +12,12 @@
       /* CSS for the image container */
       .body-container {
         text-align: center; /* Center-align the container content */
-        margin-top: 25px;
       }
+      body {
+        background-color: #f1e0d4df;
+        background-size: cover;
+      }
+
       .image-container {
         display: flex; /* Display images in a row */
         flex-wrap: wrap; /* Wrap images to the next line if there's not enough space */
@@ -20,11 +25,39 @@
       }
       .caption {
         font-weight: bold;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         margin: 10px; 
+      }
+      a img {
+        width: 150px; /* Adjust the width as needed */
+        height: auto; /* Maintain aspect ratio for responsive design */
+        border: 0px;
+        float: right;
+        margin: 0px;
+      }
+
+      nav {
+        background-color: #433128;
+        width: 100%;
+        height: 150px;
+        margin-top: 0px;
+        margin-bottom: 50px;
+      }
+        
+      a {
+        width: 20px; /* Adjust the width as needed */
+        height: 20px; /* Maintain aspect ratio for responsive design */
+        border: 0px;
+        float: right;
+        margin-top: 0px;
       }
     </style>
   </head>
   <body>
+    <nav>
+      <a href="/">
+            <img src="{{ url_for('static', filename='images/hackgt_logo.png') }}" alt="Your Logo">
+      </a>
     <div class="body-container">
       {% if image_urls %}
         {% for image_set in image_urls %}
