--- a/static/css/style.css
+++ b/static/css/style.css
@@ -267,6 +267,7 @@ a2 {
   float: right;
   margin-left: 20px;
   margin-right: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 a2:hover {
