--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
           <img src="{{ url_for('static', filename='images/book-of-art.png') }}" alt="Book of Art"></li>
           <li><a3 href="/">
             <img src="{{ url_for('static', filename='images/vector.png') }}" alt="Book of Art"></li>
-          <li><a2 href="/about">About</a2></li>
-          <li><a2 href="/creators">Creators</a2></li>
+          <li><a id="SPECIAL-ABOUT" href="/about">About</a></li>
+          <li><a href="/creators">Creators</a></li>
       </ul>
   </nav>
     <div class="welcome-page">
@@ -27,9 +27,7 @@
             <img class="vector-3" src="{{ url_for('static', filename='images/vector-7-1.svg') }}" />
             <img class="vector-4" src="{{ url_for('static', filename='images/vector-8-1.svg') }}" />
             <div class="div">Welcome!</div>
-            <a href="/about">
-              <img class="group" src="{{ url_for('static', filename='images/group-1.png') }}" />
-            </a>
+            <img class="group" src="{{ url_for('static', filename='images/group-1.png') }}" />
             <img class="group-2" src="{{ url_for('static', filename='images/group.png') }}" />      
             
             <img class="hackgt-logo" src="{{ url_for('static', filename='images/hackgt_logo.png') }}" />
