Creator button fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
           <li><a3 href="/">
             <img src="{{ url_for('static', filename='images/vector.png') }}" alt="Book of Art"></li>
           <li><a id="SPECIAL-ABOUT" href="/about">About</a></li>
-          <li><a href="/creators">Creators</a></li>
+          <li><a id="SPECIAL-ABOUT"" href="/creators">Creators</a></li>
       </ul>
   </nav>
     <div class="welcome-page">
